Update tests and CI environment (#178)
* Move to an Ubuntu-based runner

The macos-11 runners were retired and are no longer available.

* Bump java-version to 17

* Fix :paris:testDebugUnitTest

* Update gradle and Java versions

* Fix paris processor tests

* Update AGP

* Update gradle wrapper version

* Add namespace

* Update kotlin to latest

* Add missing namespaces to remaining modules

* Use Kotlin 1.9

* Fix lint errors

* Fix failing tests

* Fix sample build errors

* Fix paris-test again

* Fix tests again

---------

Co-authored-by: Allen Chen <allenchen1154@gmail.com>